--- a/src/css/style.css
+++ b/src/css/style.css
@@ -32,7 +32,7 @@ html, body {
 .user-container input {
     border-radius: 3px;
     border: none;
-    height: 100%;
+    height: 2rem;
 }
 
 .display-container {
